# test-particle-sim-1D

./: .pre-commit-config.yaml  README.md  noxfile.py  pyproject.toml
.github/workflows/: ci.yml
examples/: README.md
examples/child_law_sheath/: collisional_child_law_script.py  collisionless_child_law_script.py
examples/child_law_sheath/collisional_results/: child_sheath_results.npz  energy_distribution.csv  tracer_trajectories.csv
examples/child_law_sheath/collisionless_results/: child_sheath_results.npz  energy_distribution.csv  tracer_trajectories.csv
examples/child_law_sheath/cross_sections/: argon_momentum_transfer.npy
examples/child_law_sheath/plotting/: collisional_child_law_sheath_plotting.py  collisionless_child_law_sheath_plotting.py
examples/example_magneticmirror/: example_magneticmirror.py
examples/example_magneticmirror/plotting/: example_magneticmirror_plotting.py
examples/example_magneticmirror/results/: drift_velocity_mirror.csv  example_magneticmirror_results.npz  time_temperature_mirror.csv
examples/example_uniformE/: example_uniformE.py
examples/example_uniformE&B/: example_uniformE_B.py
examples/example_uniformE&B/plotting/: example_uniformE&B_plotting.py
examples/example_uniformE&B/results/: density_profile.csv  drift_velocity.csv  energy_distribution.csv  example_uniformE_B_results.npz  time_temperature.csv  tracer_trajectories.csv
examples/example_uniformE/plotting/: example_uniformE_plotting.py  plotting.py
examples/example_uniformE/results/: density_profile.csv  drift_velocity.csv  energy_distribution.csv  example_uniformE_results.npz  time_temperature.csv  tracer_trajectories.csv
examples/magneticmirror/: magneticmirror.py
examples/magneticmirror/plotting/: magneticmirror_plotting.py
examples/magneticmirror/results/: density_profile_mirror.csv  drift_velocity_mirror.csv  energy_distribution_mirror.csv  magneticmirror_results.npz  time_temperature_mirror.csv  tracer_trajectories_mirror.csv
examples/uniformE/: uniformE.py
examples/uniformE/plotting/: uniformE_plotting.py
examples/uniformE/results/: density_profile.csv  (+5 more)
examples/uniformE_B/: uniformE_B.py
src/test_particle_sim_1d/: __init__.py  collisions.py  diagnostics.py  fields.py  initialization.py  integrators.py  particles.py
tests/: test_collisions.py  test_exb_drift.py  test_fields.py  test_gyromotion.py  test_physics_integration.py  test_species.py  test_species1.py  test_thermal_velocity.py
(+7 files in other folders)
