[project]
name = "test-particle-sim-1d"
version = "0.1.0"
description = "A 1D test particle tool for plasma applications"
authors = [
    { name = "budjensen", email = "bjensen@princeton.edu" },
    { name = "lkadz" },
    { name = "SunnyNyhus" },
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
]

[dependency-groups]
test = [
    "pytest",
]
dev = [
    { include-group = "test" },
    "pre-commit",
    "ruff",
    "nox",
]
docs = [
    "furo",
    "myst_parser",
    "sphinx",
    "sphinx-markdown-builder",
    "sphinx_copybutton",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "FURB",     # refurb
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "PYI",      # flake8-pyi
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
]
typing-modules = ["mypackage._compat.typing"]
isort.required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["T20"]
"src/test_particle_sim_1d/__init__.py" = ["T201"]
